completed Javascript and fixed contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -2,7 +2,7 @@
 
 :root {
     /* change the values below to your colors from your palette */
-    --primary-color: #346fae;
+    --primary-color: #265586;
     --secondary-color: #133b52;
     --accent1-color: #64acfa;
     --accent2-color: #61410a;
